# PySacherECLControl

./: .gitignore  .gitmodules  CITATION.cff  LaserConfig.yaml  README.md  __init__.py  config.yaml  lasercontrol.spec  main.py  pyproject.toml  requirements.txt
.github/workflows/: pyinstaller.yml  python-publish.yml
.sim/: laser_simulator.yaml
LaserControl/: __init__.py
LaserControl/controller/: ErrorConverter.py  LaserCon.py  LaserControlController.py  LaserControlErrors.py
LaserControl/controller/multiprocess/: LaserStateArray.py  move_to_wavelength.py  wavelength_sweep.py
LaserControl/model/: LaserControlModel.py
LaserControl/resources/: LaserControlWindow.ui
LaserControl/view/: LaserControlView.py  Ui_LaserControlWindow.py  WidgetLaserInformation.py
examples/: CaptDeviceConfig.yaml  LaserConfig.yaml  Main_ADScope.py  main.py  test_with_captdev.py
pyinstaller/: lasercontrol_scope.spec
pyinstaller copy/: lasercontrol.spec
src/: lasercontrol.py  lasercontrol.spec  lasercontrol_scope.py  lasercontrol_scope.spec  resources_rc.py
src/LaserControl/: LaserConfig.py  __init__.py
src/LaserControl/controller/: ErrorConverter.py  LaserCon.py  LaserControlController.py  LaserDeviceControl.py  __init__.py
src/LaserControl/controller/multiprocess/: LaserStateMPSetter.py  MPLaserDevice.py  MPLaserDeviceControl.py  get_current_wavelength.py  logging.py  move_to_wavelength.py
src/LaserControl/libs/: LaserLibSimulator.py  LaserSceleton.py  __init__.py
src/LaserControl/libs/Python3.10/: SacherMotorControl.pyd
src/LaserControl/libs/Python3.11/: SacherMotorControl.pyd
src/LaserControl/libs/Python3.12/: SacherMotorControl.pyd
src/LaserControl/model/: LaserControlModel.py  LaserControlSignals.py
src/LaserControl/resources/: LaserControlWindow.ui  convert.sh  resources.qrc
src/LaserControl/view/: LaserControlView.py  Ui_LaserControlWindow.py  WidgetLaserInformation.py
src/LaserControlOld/: __init__.py
src/LaserControlOld/LaserUncertainty/: __init__.py
src/LaserControlOld/controller/: BaseLaserController.py  LaserMMI.py  LaserSLLIB.py  LaserSimulator.py
src/LaserControlOld/model/: LaserModel.py
src/LaserControlOld/resources/: LaserControlWindow.ui
src/LaserControlOld/view/: LaserControlWindow.py  Ui_LaserControlWindow.py
src/SacherECLControl/: Helpers.py  LaserConfig.py  __init__.py
src/SacherECLControl/controller/: LaserDeviceControl.py
src/SacherECLControl/libs/: LaserLibSimulator.py  LaserSceleton.py  sweepHelpers.py
src/SacherECLControl/model/: LaserControlModel.py  LaserControlSignals.py  __init__.py
src/SacherECLControl/resources/: LaserControlWindow.ui  convert.sh  resources.qrc
src/SacherECLControl/view/: LaserControlView.py  Ui_LaserControlWindow.py  WidgetLaserInformation.py  resources_rc.py
src/libs/: EposCmd64.lib  LaserLib.pyd  LaserLibSimulator.py  dc_motor.py
tests/: test_laser_control.py
(+10 files in other folders)
