[project]
name = "lasercontrol"
version = "1.0.1"
authors = [
  { name="Christoph Schmidt", email="cschmidt.fs@gmail.com" },
]
description = "A UI for controlling the Sacher TEC Laser"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    'PySide6',
    'rich',
    'pyyaml',
    'captdevicecontrol@git+https://github.com/agentsmith29/fs.captdevicecontrol@develop',
    'fswidgets@git+https://github.com/agentsmith29/fstools.fswidgets@develop',
    'confighandler@git+https://github.com/agentsmith29/fstools.confighandler@develop',
    'cmp@git+https://github.com/agentsmith29/fstools.cmp@develop'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3.0",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://gitlab.tugraz.at/flexsensor-public/lasercontrol"