[project]
name = "lasercontrol"
version = "1.1.0"
authors = [
  { name="Christoph Schmidt", email="cschmidt.fs@gmail.com" },
]
description = "A UI for controlling the Sacher TEC Laser"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    'PySide6',
    'rich',
    'pyyaml',
    'captdevicecontrol@git+https://github.com/agentsmith29/fs.captdevicecontrol@v.1.1.0',
    'fswidgets@git+https://github.com/agentsmith29/fstools.fswidgets@v.0.0.3.1',
    'mpPy6',
    'confPy6'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3.0",
    "Operating System :: Windows",
]

[project.urls]
"Homepage" = "https://gitlab.tugraz.at/flexsensor-public/lasercontrol"